2020-07-26 VicSanRoPe <?>

	* Spanish translation

2020-07-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show bit position for binary number that does not fit in window

2020-07-22 Hanna Knutsson <hanna.knutsson@protonmail.com>
	
	* Split long numerical results in two lines
	* Copy the result when clicking on it

2020-07-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve text layout (do not cut off part of y) in result view
	* Do not automatically open any dialogs (for matrices and information messages) during calculate-as-you-type

2020-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Auto completion for objects and properites in data set functions
	* Fixes for vectors in insert function dialog
	* Improve spacing with numbers in result display

2020-07-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add example expressions appendix to manual

2020-07-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix Insert button in insert function dialog
	* Fix updating of operator symbols in result when preferences change

2020-07-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use middle dot instead of multiplication x in unit expressions
	* Fix alignment and improve spacing in flat division (primarily in unit expressions)
	* Improve display of abs(), ceil(), and floor()
	* Move negative exponents menu item (negative exponents now only applies to units)
	* Disable prefixes by default for scientific, engineering, and pure modes
	* Do not disable sort minus last and enable negative exponents in scientific and pure modes if these options has been explicitely set by the user (when in one of these modes)

2020-07-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix and improve display of division
	* Improve display of roots

2020-06-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to hide left or right part of the keypad
	* Replace fraction mode combo box with a single toggle button
