@@ -1,3 +1,11 @@
+2020-08-03 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Show error message when gnuplot is not installed when the user tries to open the plot dialog, instead of disabling the menu item
+
+2020-08-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix display of negative number with scientific notation
+
 2020-07-26 VicSanRoPe <?>
 
 	* Spanish translation
